--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <header id="top">
       <h1>Prework Study Guide</h1>
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
+      <h2>✨ Open the Console to See What's Happening ✨</h2>
     </header>
 
 
@@ -45,7 +46,8 @@
           <li>git checkout -b branch-name: Creates a new branch and switches to it</li>
           <li>git add -A: Commit all files in the working branch </li>
           <li>git commit -m "description": To associate a message with the commit</li>
-          <li>git pull origin main: Takes you to the most current/updated main branch </li>
+          <li>git checkout main: Navigates you to the main branch</li>
+          <li>git pull origin main: Pulls the remote branch to the local branch and takes you to the most current/updated main branch </li>
           <li>git push origin something: Pushes the changes made locally to the remote GitHub branch</li>
         </ul>
       </section>
@@ -63,5 +65,6 @@
     <footer>
       <p>I can code!</p>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
