Adding list of topics to console

--- a/index.html
+++ b/index.html
@@ -56,8 +56,11 @@
       <section class="card" id="javascript-section">
       <h2>JavaScript</h2>
         <ul>
-          <li>Enter your JavaScript notes here</li>
+          <li>var - A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer excutes code in a script. From top to bottom of page.</li>
+          <li>if- When using the if statement, code will only excute if the statement meets a condition, or is true.</li>
         </ul>
+        <li>for - performing a tast on each piece of groups of related data (array). </li>
       </section>
 
     </main>
